-Wreturn-type warning in BaseAudioContext.cpp https://bugs.webkit.org/show_bug.cgi?id=216215

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-09-05
Reviewed by Darin Adler.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::periodicWave):

Canonical link: https://commits.webkit.org/229030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266661 268f45cc-cd09-0410-ab3c-d52691b4dbfc